// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Final form input component Should render correctly 1`] = `
<FormGroup
  bsClass="form-group"
  validationState={null}
>
  <Col
    bsClass="col"
    className="control-label"
    componentClass="label"
    xs={2}
  >
    foo
  </Col>
  <Col
    bsClass="col"
    componentClass="div"
    xs={8}
  >
    <FormControl
      bsClass="form-control"
      componentClass="input"
      name="name"
      onBlur={[MockFunction]}
      onChange={[MockFunction]}
      onFocus={[MockFunction]}
      placeholder=""
      type="text"
      value=""
    />
  </Col>
</FormGroup>
`;

exports[`Final form input component Should render with error message 1`] = `
<FormGroup
  bsClass="form-group"
  validationState="error"
>
  <Col
    bsClass="col"
    className="control-label"
    componentClass="label"
    xs={2}
  >
    foo
  </Col>
  <Col
    bsClass="col"
    componentClass="div"
    xs={8}
  >
    <FormControl
      bsClass="form-control"
      componentClass="input"
      name="name"
      onBlur={[MockFunction]}
      onChange={[MockFunction]}
      onFocus={[MockFunction]}
      placeholder=""
      type="text"
      value=""
    />
    <HelpBlock
      bsClass="help-block"
    >
      Error message
    </HelpBlock>
  </Col>
</FormGroup>
`;
